--- a/Assignment7/styles.css
+++ b/Assignment7/styles.css
@@ -2,8 +2,16 @@
     margin: 0;
 }
 
+body {
+    background-color: black;
+}
+
 div {
+    height: 100vh;
     position: relative;
+    display: grid;
+    justify-items: center;
+    align-items: center;
 }
 
 canvas {
